--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   --tile-light: white;
   --tile-dark: rgb(20, 20, 20);
   --cursor-color: red;
-  --header-bg: rgba(0, 0, 0, 0.6);
+  --header-bg: rgba(0, 0, 0, 0.8);
   --sidebar-bg: rgba(0, 0, 0, 0.4);
   --button-bg: #444;
   --button-hover: #555;
@@ -28,7 +28,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding: 1rem;
   position: relative;
 }
@@ -73,13 +73,15 @@ body {
 
 /* Sidebar Styling */
 .game-sidebar {
-  position: fixed;
+  position: absolute; /* breaks the sidebar */
+  z-index: 100;
   left: 2vw;
   top: 50%;
   transform: translateY(-50%);
   width: 12vw;
   background: var(--sidebar-bg);
   padding: 1.5vh 1vw;
+  
   border-radius: 8px;
   display: flex;
   flex-direction: column;
@@ -102,6 +104,7 @@ body {
   gap: 1vh;
   width: 100%;
 }
+
 .size-btn {
   background: var(--button-bg);
   border: none;
@@ -162,6 +165,7 @@ body {
   padding: 3rem;
   border-radius: 10px;
   display: none;
+  transition: display 0.2s;
   width: 30%;
   z-index: 100;
 }
