--- a/src/style.css
+++ b/src/style.css
@@ -57,7 +57,7 @@ body {
   width: 20vw;
   background: var(--sidebar-bg);
   padding: 1.5vh 2vw;
-  border-radius: 8px;
+  border-radius: 1vw;;
   z-index: 10;
 }
 
@@ -94,7 +94,7 @@ body {
   background: var(--sidebar-bg);
   padding: 1.5vh 1vw;
   
-  border-radius: 8px;
+  border-radius: 1vw;
   display: flex;
   flex-direction: column;
   gap: 1vh;
@@ -124,7 +124,7 @@ body {
   border: none;
   color: white;
   padding: 1vh;
-  border-radius: 6px;
+  border-radius: 0.5vw;;
   cursor: pointer;
   transition: background-color 0.2s;
   font-size: 1.8vh;
@@ -152,7 +152,7 @@ body {
   background: var(--sidebar-bg);
   padding: 1.5vh 1vw;
   
-  border-radius: 8px;
+  border-radius: 1vw;;
   display: flex;
   flex-direction: column;
   gap: 1vh;
@@ -182,7 +182,7 @@ body {
   border: none;
   color: white;
   padding: 1vh;
-  border-radius: 6px;
+  border-radius: 0.5vw;
   cursor: pointer;
   transition: background-color 0.2s;
   font-size: 1.8vh;
@@ -245,7 +245,7 @@ body {
   transform: translate(-50%, -50%);
   background: var(--win-bg);
   padding: 3rem;
-  border-radius: 10px;
+  border-radius: 1vw;;
   opacity: 0;
   pointer-events: none;
   transition: opacity 0.2s;
@@ -290,6 +290,45 @@ body {
 
 
 
+.info {
+  position: absolute;
+  bottom: 2vh;
+  left: 2vh;
+  display: flex;
+  align-items: center;
+  gap: 1vw;
+  font-size: 1.5vh;
+  opacity: 0.8;
+}
+
+#github {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 4vh;  /* Double the size */
+  height: 4vh;
+  border-radius: 50%; /* Rounded */
+  opacity: 1; /* Full opacity */
+  transition: filter 0.2s ease-in-out, transform 0.2s ease-in-out;
+}
+
+#github img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+#github:hover {
+  filter: brightness(1.5); /* More brightness on hover */
+  transform: scale(1.1); /* Slight enlargement for better feedback */
+  cursor: pointer;
+}
+
+#version {
+  white-space: nowrap;
+}
+
+
 
 /* Aspect Ratio Based Layout */
 @media (max-aspect-ratio: 4/5) {
@@ -298,16 +337,30 @@ body {
   }
 
   .game-sidebar {
+      width: auto;
       position: fixed;
       left: 0;
+      right: 50vw;
       top: auto;
       bottom: 0;
       transform: none;
-      width: 100%;
       max-height: 20vh;
       border-radius: 8px 8px 0 0;
       padding: 1vh 2vw;
   }
+
+  .game-sidebar2 {
+    width: auto;
+    position: fixed;
+    right: 0;
+    left: 50vw;
+    top: auto;
+    bottom: 0;
+    transform: none;
+    max-height: 20vh;
+    border-radius: 8px 8px 0 0;
+    padding: 1vh 2vw;
+}
 
   .size-selector {
       flex-direction: row;
